<resources>
    <string name="app_name">议易Plus</string>
    <string name="un_login">议易Plus</string>
    <string name="title_activity_gua_details">GuaDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- tips for 本卦、错卦、综卦、互卦、变卦 -->
    <string name="ben">《本卦》体现的是事物初始、开始阶段的信息，代表的是目前的情况。</string>
    <string name="cuo">《错卦》是同一立场，相反角度看问题；一种从反面的角度,是将正卦各爻阴阳互变另成一卦，代表此一问题的危机、转机，若问题的结果是吉，则错卦代表危机，也就是不要去做危机中所述的这些事情，否则事情将往负面转换，藉以提出警语；如果事情结果为凶，则错卦代表转机，要调整改变自己原有的态度与作为，去做错卦上所述的这些事情，如此事情将会因为你的正面改变而向正面转化。</string>
    <string name="zong">《综卦》是相反立场看问题；将正卦旋转180度，另成一卦，代表从另一个角度来看此一问题，可以说是由对方的角度又有从第三者的角度来综观此一问题，是问题的另一个面。</string>
    <string name="hu">《互卦》为事情发展的过程；由本卦的两个内卦组合而成的。具体组合方法是：本卦中的第三、四、五爻，作为互卦的上卦，本卦的第二、三、四爻，作为互卦的下卦。</string>
    <string name="bian">《变卦》为事情发展的结果；由本卦经过某个爻的变动、变化而得到的，也就是变卦是由本卦变动而来的。变卦代表着事物发展变化的最终结果，也就是求测者想要得到的最终结果、结局。</string>
    <string name="nav_text_gua">六十四卦</string>
    <string name="nav_text_bu">占卜</string>
    <string name="search">搜索</string>
    <string name="jie_tip_title">解卦步骤:</string>
    <string name="jie_tip">先看《本卦》卦辞，再看《老卦》卦辞（如果有），然后看《互卦》理解发展过程，最后看《变卦》卦辞，同时看《老变卦》卦辞（如果有）；无论凶吉，想要事情朝好的发现发展，就参考下《错卦》和《综卦》；想全方位了解全局，就把每个卦的《爻辞》、《篆辞》和《象辞》都参考一遍。</string>
    <string name="gua_tip">解卦说明:</string>
    <string name="lao">《老卦》起卦有可能出出现《老阳爻》或《老阴爻》老爻预示着物极必反，表示这个爻正在或即将转换，因此阴阳会互换，从而产生了全新的卦，参考地位等同《本卦》。</string>
    <string name="lao_bian">《老变卦》这个滑稽的名字缘于《老卦》的《变卦》，同上，参考地位等同于《变卦》。</string>
    <string name="go_btn">起卦</string>
    <string name="jie_gua_btn">解卦</string>
    <string name="reset_btn">再来一卦</string>
</resources>