<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BuActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Eplus.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Eplus.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/guaBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:cardCornerRadius="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/guaBackText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:paddingHorizontal="10dp"
            android:paddingTop="50dp"
            android:background="@color/black"/>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:id="@+id/gua"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp">

                <LinearLayout
                    android:id="@+id/tip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:background="@color/background_dark"
                        android:padding="5dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/jie_tip_title" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/jie_tip"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:background="@color/background_dark"
                        android:padding="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/gua_tip" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/ben"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/hu"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5sp"
                        android:text="@string/cuo"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/zong"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/bian"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/lao"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/lao_bian"/>
                </LinearLayout>
            </ScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/guaRec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"/>

            <FrameLayout
                android:id="@+id/guaWrapper"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/benTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:paddingVertical="5dp"
                    android:paddingHorizontal="10dp"
                    android:layout_gravity="center"
                    android:background="@color/black"
                    android:visibility="invisible"
                    android:textAlignment="center" />

            <ImageView
                android:id="@+id/yao6Yang"
                android:layout_width="230dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/yang"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/yao6YangOld"
                android:layout_width="230dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/yang_old"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/yao6Yin"
                android:layout_width="230dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/yin"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/yao6YinOld"
                android:layout_width="230dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/yin_old"
                android:visibility="invisible"/>

            <ImageView
                android:id="@+id/yao5Yang"
                android:layout_width="230dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/yang"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/yao5YangOld"
                android:layout_width="230dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/yang_old"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/yao5Yin"
                android:layout_width="230dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/yin"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/yao5YinOld"
                android:layout_width="230dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/yin_old"
                android:visibility="invisible"/>

            <ImageView
                android:id="@+id/yao4Yang"
                android:layout_width="230dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/yang"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/yao4YangOld"
                android:layout_width="230dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/yang_old"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/yao4Yin"
                android:layout_width="230dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/yin"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/yao4YinOld"
                android:layout_width="230dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/yin_old"
                android:visibility="invisible"/>

            <ImageView
                android:id="@+id/yao3Yang"
                android:layout_width="230dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/yang"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/yao3YangOld"
                android:layout_width="230dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/yang_old"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/yao3Yin"
                android:layout_width="230dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/yin"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/yao3YinOld"
                android:layout_width="230dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/yin_old"
                android:visibility="invisible"/>

            <ImageView
                android:id="@+id/yao2Yang"
                android:layout_width="230dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/yang"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/yao2YangOld"
                android:layout_width="230dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/yang_old"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/yao2Yin"
                android:layout_width="230dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/yin"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/yao2YinOld"
                android:layout_width="230dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/yin_old"
                android:visibility="invisible"/>

            <ImageView
                android:id="@+id/yao1Yang"
                android:layout_width="230dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/yang"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/yao1YangOld"
                android:layout_width="230dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/yang_old"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/yao1Yin"
                android:layout_width="230dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/yin"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/yao1YinOld"
                android:layout_width="230dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/yin_old"
                android:visibility="invisible"/>

            </FrameLayout>


    </FrameLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/go"
        android:paddingHorizontal="40dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_btn"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/jie"
        android:paddingHorizontal="40dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/jie_gua_btn"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reset"
        android:paddingHorizontal="40dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/reset_btn"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>